v_utils_macros/tests/compile_fail_deps/src/lib.rs
// Empty: this crate exists only to declare dependencies for the compile_fail ui_test harness.
